--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -29,7 +29,7 @@ The AIX Host Utilities release contains the following new features and enhanceme
 
 == Fixed in this release
 
-There are no fixed issues in this release. 
+There are no fixed issues in the AIX 7.0 release. 
 
 == Known problems and limitations
 You should be aware of the following known problems and limitations that might impact performance on your specific host.
