--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -22,7 +22,7 @@ For specific information about the operating system versions and updates that th
 
 The AIX Host Utilities release contains the following new features and enhancements:
 
-* AIX Host Utilities 7.0 added SCSI UNMAP support of the AIX host OS. With AIX Host Utilities 7.0, SCSI THIN provisioning functions seamlessly with AIX and NetApp LUNs for FC devices.
+* AIX Host Utilities 7.0 supports SCSI UNMAP of the AIX host OS. With AIX Host Utilities 7.0, SCSI thin provisioning functions seamlessly with AIX and NetApp LUNs for FC devices.
 
 * AIX Host Utilities 6.1 added support for the memory fault issue that occurred in earlier versions of the AIX host OS. With AIX Host Utilities 6.1, only the sanlun binary has changed. The MPIO and related ODM remain unchanged.
 
