--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -20,7 +20,7 @@ For specific information about the operating system versions and updates that th
 
 == What's new
 
-The AIX Host Utilities release contains the following new features and enhancements:
+Recent releases of AIX Host Utilities contain the following new features and enhancements:
 
 * AIX Host Utilities 7.0 supports SCSI UNMAP of the AIX host OS. With AIX Host Utilities 7.0, SCSI thin provisioning functions seamlessly with AIX and NetApp LUNs for FC devices.
 
