--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -52,24 +52,24 @@ The NetApp AIX Host Utilities software package is available on the link:https://
 
 . Decompress the file and extract the SAN toolkit software package.
 +
-`bash-4.1$ tar -xvf ntap_aix_host_utilities_7.0.tar.gz`
+`# tar -xvf ntap_aix_host_utilities_7.0.tar.gz`
 
 +
 The following directory is created when you decompress the file: `ntap_aix_host_utilities_7.0.`. This directory contains one of the following subdirectories: MPIO, NON_MPIO, or SAN_Tool_Kit.
 
 . Install the AIX MPIO:
 +
-`bash-4.1$ installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/MPIO NetApp.MPIO_Host_Utilities_Kit`
+`# installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/MPIO NetApp.MPIO_Host_Utilities_Kit`
 
 . Install the SAN toolkit:
 +
-`bash-4.1$ installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/SAN_Tool_Kit/NetApp.SAN_toolkit`
+`# installp -aXYd /var/tmp/ntap_aix_host_utilities_7.0/SAN_Tool_Kit/NetApp.SAN_toolkit`
 
 . Reboot the host.
 
 . Verify the installation:
 +
-`bash-4.1$ lslpp -l |grep -i netapp`
+`# lslpp -l |grep -i netapp`
 +
 ----
 NetApp.MPIO_Host_Utilities_Kit.config
@@ -85,7 +85,7 @@ NetApp.SAN_toolkit.sanlun  7.0.0.0  COMMITTED  NetApp SAN Toolkit sanlun
 
 . Confirm the software version:
 +
-`bash-4.1$ sanlun version`
+`# sanlun version`
 +
 ----
 7.0.725.3521
@@ -93,13 +93,13 @@ NetApp.SAN_toolkit.sanlun  7.0.0.0  COMMITTED  NetApp SAN Toolkit sanlun
 
 . Verify that the SCSI UNMAP `lbp_enabled` parameter is added to the ODM by running the following commands.
 +
-`bash-4.1$ odmget -q "uniquetype=disk/fcp/NetAppMPIO" PdAt |grep  "lbp_enabled"`
+`# odmget -q "uniquetype=disk/fcp/NetAppMPIO" PdAt |grep  "lbp_enabled"`
 +
 ----
 attribute = "lbp_enabled"
 ----
 +
-`bash-4.1$ odmget -q "uniquetype=disk/fcp/NetAppMPIO and attribute=lbp_enabled" PdAt`
+`# odmget -q "uniquetype=disk/fcp/NetAppMPIO and attribute=lbp_enabled" PdAt`
 +
 ----
 PdAt:
@@ -123,7 +123,7 @@ AIX Host Utilities is a NetApp host software that provides a command line toolki
 In the following example, the `sanlun lun show` command returns the LUN information.
 
 ----
-bash-4.1$ sanlun lun show all
+# sanlun lun show all
 ----
 *Example output*
 ----
