--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -44,7 +44,7 @@ The NetApp AIX Host Utilities software package is available on the link:https://
 
 . Log in to your host.
 * On an AIX host, log in as *root*.
-* On a PowerVM host, log in as *padmin*, and then enter the `oem_setup_env` command to become root.
+* On a PowerVM host, log in as *padmin*, and then enter the `oem_setup_env` command to become a root user.
 
 . Go to the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^] and download the compressed file containing the Host Utilities to a directory on your host.
 
