--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -55,7 +55,7 @@ The NetApp AIX Host Utilities software package is available on the link:https://
 `# tar -xvf ntap_aix_host_utilities_7.0.tar.gz`
 
 +
-The following directory is created when you decompress the file: `ntap_aix_host_utilities_7.0.`. This directory contains one of the following subdirectories: MPIO, NON_MPIO, or SAN_Tool_Kit.
+The following directory is created when you decompress the file: `ntap_aix_host_utilities_7.0`. This directory contains one of the following subdirectories: MPIO, NON_MPIO, or SAN_Tool_Kit.
 
 . Install the AIX MPIO:
 +
@@ -91,7 +91,7 @@ NetApp.SAN_toolkit.sanlun  7.0.0.0  COMMITTED  NetApp SAN Toolkit sanlun
 7.0.725.3521
 ----
 
-. Verify that the SCSI UNMAP `lbp_enabled` parameter is added to the ODM by running the following commands.
+. Verify that the SCSI UNMAP `lbp_enabled` parameter is added to the ODM by running the following commands:
 +
 `# odmget -q "uniquetype=disk/fcp/NetAppMPIO" PdAt |grep  "lbp_enabled"`
 +
