--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -70,7 +70,7 @@ The following directory is created when you decompress the file: `ntap_aix_host_
 . Verify the installation:
 +
 ----
-`# sanlun version`
+# sanlun version
 ----
 
 == SAN Toolkit
