--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -29,7 +29,7 @@ AIX Host Utilities support the following environments:
 +
 For more information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
 
-.What you'll need
+.Before you begin
 
 * For reliable operation, verify that your entire iSCSI, FC, or FCoE configuration is supported.
 +
@@ -50,7 +50,7 @@ The NetApp AIX Host Utilities software package is available on the link:https://
 
 . Go to the directory containing the download.
 
-. Decompress the file and extract the SAN toolkit software package.
+. Decompress the file and extract the SAN toolkit software package:
 +
 `# tar -xvf ntap_aix_host_utilities_7.0.tar.gz`
 
