--- a/_include/hu/reuse_hu_asa_configuration_note.adoc
+++ b/_include/hu/reuse_hu_asa_configuration_note.adoc
@@ -1,1 +1,1 @@
-NOTE: A single LUN should require no more than four paths. More than eight paths might cause path issues during storage failures.
+NOTE: A single LUN shouldn't require more than four paths. More than eight paths might cause path issues during storage failures.
