--- a/_include/hu/reuse_hu_san_booting_steps.adoc
+++ b/_include/hu/reuse_hu_san_booting_steps.adoc
@@ -4,10 +4,10 @@
 . Verify that multiple paths are available.
 +
 [NOTE] 
-Multiple paths only become available after the host OS is up and running on the paths.
+Multiple paths become available after the host OS is up and running on the paths.
 
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 
-. Reboot the host to verify that the SAN boot was successful.
+. Reboot the host to verify that the boot was successful.
