--- a/_include/windows/reuse_windows_san_booting.adoc
+++ b/_include/windows/reuse_windows_san_booting.adoc
@@ -3,6 +3,6 @@ If you opt to use SAN booting, it must be supported by your configuration. You c
 . Map the SAN boot LUN to the host.
 . Verify that multiple paths are available. 
 +
-Note: Multiple paths only become available after the host OS is up and running on the paths.
+NOTE: Multiple paths only become available after the host OS is up and running on the paths.
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped. For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 . Reboot the host to verify the boot is successful.
