Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/_include/hu/reuse_hu_recommended_settings_ol6.adoc
+++ b/_include/hu/reuse_hu_recommended_settings_ol6.adoc
@@ -22,7 +22,7 @@ blacklist {
 
 .Example
 
-In the following example, `sda` is the local SCSI disk that we need to add to the blacklist.
+In the following example, `sda` is the local SCSI disk that you want to add to the blacklist.
 
 .Steps
 
