--- a/nvme_ol_89.adoc
+++ b/nvme_ol_89.adoc
@@ -21,7 +21,7 @@ The following support is available for the NVMe-oF host configuration for Oracle
 
 * Both NVMe and SCSI traffic can be run on the same co-existent host. Therefore, you can configure dm-multipath for SCSI mpath devices for SCSI LUNs, whereas you might use NVMe multipath to configure NVMe-oF namespace devices on the host.
 
-* There is no sanlun support for NVMe-oF. Therefore, there is no host utility support for NVMe-oF on an Oracle Linux 8.9 host. You can rely on the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
+* There is no sanlun support for NVMe-oF. Therefore, there is no host utility support for NVMe-oF on an Oracle Linux 8.9 host. You can use the NetApp plug-in included in the native `nvme-cli` package for all NVMe-oF transports.
 
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
