--- a/nvme_rhel_88.adoc
+++ b/nvme_rhel_88.adoc
@@ -211,9 +211,11 @@ FCP CMPL: xb 00000821 Err 00012fcd
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
+The native inbox qla2xxx driver included in the RHEL 8.8 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+
 .Steps
 
-. The native inbox qla2xxx driver included in the RHEL 8.8 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
