--- a/_include/hu/reuse_hu_installing_luhu_without32.adoc
+++ b/_include/hu/reuse_hu_installing_luhu_without32.adoc
@@ -2,9 +2,8 @@ The NetApp Linux Unified Host Utilities software package is available on the lin
 
 NetApp strongly recommends installing the Linux Unified Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
-.What you'll need
 
-If you have a version of Linux Unified Host Utilities currently installed, you should upgrade or remove it, and then use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed, you should either upgrade it, or remove it and follow these steps to install the latest version.
 
 .Steps
 
