--- a/hu_rhel_91.adoc
+++ b/hu_rhel_91.adoc
@@ -22,9 +22,7 @@ The NetApp Linux Unified Host Utilities software package is available on the lin
 
 Install the Linux Unified Host Utilities is strongly recommended by NetApp, but not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration.
 
-
-.What you'll need
-If you have a version of Linux Unified Host Utilities currently installed, you should upgrade or remove it and use the following steps to install the latest version.
+If you have a version of Linux Unified Host Utilities currently installed, you should either upgrade it, or remove it and use the following steps to install the latest version.
 
 .Steps
 
