--- a/nvme_ol_87.adoc
+++ b/nvme_ol_87.adoc
@@ -208,9 +208,12 @@ FCP CMPL: xb 00000a89 Err 0000e2f3
 
 .Marvell/Qlogic FC Adapter for NVMe/FC
 --
+
+The native inbox qla2xxx driver included in the OL 8.7 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+
 .Steps
 
-. The native inbox qla2xxx driver included in the OL 8.7 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
