--- a/nvme_ol_93.adoc
+++ b/nvme_ol_93.adoc
@@ -210,9 +210,12 @@ FCP CMPL: xb 000010a5 Err 000147e4
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
+
+The native inbox qla2xxx driver included in the OL 9.3 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+
 .Steps
 
-.  The native inbox qla2xxx driver included in the OL 9.3 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
