--- a/nvme_rhel_89.adoc
+++ b/nvme_rhel_89.adoc
@@ -212,9 +212,12 @@ FCP CMPL: xb 00000002 Err 00000003
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
+
+The native inbox qla2xxx driver included in the RHEL 8.9 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+
 .Steps
 
-. The native inbox qla2xxx driver included in the RHEL 8.9 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
