--- a/nvme_rhel_94.adoc
+++ b/nvme_rhel_94.adoc
@@ -210,9 +210,12 @@ FCP CMPL: xb 00000629 Err 0001bd3d
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
+
+The native inbox qla2xxx driver included in the RHEL 9.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support. 
+
 .Steps
 
-. The native inbox qla2xxx driver included in the RHEL 9.4 GA kernel has the latest fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. The native inbox qla2xxx driver included in the RHEL 9.4 GA kernel has the latest fixes. These fixes are essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
