--- a/nvme_ubuntu_2204.adoc
+++ b/nvme_ubuntu_2204.adoc
@@ -197,9 +197,12 @@ FCP CMPL: xb 00000000 Err 00000000
 
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
+
+The native inbox qla2xxx driver included in the Ubuntu 22.04 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
+
 .Steps
 
-. The native inbox qla2xxx driver included in the Ubuntu 22.04 GA kernel has the latest upstream fixes essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
