--- a/nvme_ol_86.adoc
+++ b/nvme_ol_86.adoc
@@ -164,9 +164,11 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Configure the Marvell/QLogic FC Adapter for NVMe/FC
 
+The native inbox qla2xxx driver included in the OL 8.6 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support.
+
 .Steps
 
-. Verify that you are running the supported adapter driver and firmware versions. The native inbox qla2xxx driver included in the OL 8.6 GA kernel has the latest upstream fixes. These fixes are. These fixes are essential for ONTAP support:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
