--- a/nvme_rhel_92.adoc
+++ b/nvme_rhel_92.adoc
@@ -206,11 +206,11 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 .Marvell/QLogic FC Adapter for NVMe/FC
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.2 GA kernel has the latest upstream fixes. 
+The native inbox qla2xxx driver included in the RHEL 9.2 GA kernel has the latest upstream fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
-. These fixes are essential for ONTAP support. Verify that you are running the supported adapter driver and firmware versions:
+. Verify that you are running the supported adapter driver and firmware versions:
 +
 ----
 # cat /sys/class/fc_host/host*/symbolic_name
