--- a/nvme_rhel_90.adoc
+++ b/nvme_rhel_90.adoc
@@ -160,7 +160,7 @@ FCP CMPL: xb 00001f50 Err 0000d9f8
 .Marvell/QLogic
 --
 
-The native inbox qla2xxx driver included in the RHEL 9.0 kernel has the latest fixes,. These fixes are essential for ONTAP support. 
+The native inbox qla2xxx driver included in the RHEL 9.0 kernel has the latest fixes. These fixes are essential for ONTAP support. 
 
 .Steps
 
